--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@ body {
   font-weight: 400;
   font-size: 15px;
   line-height: 1.8;
-  color: rgba(0, 0, 0, 0.7); }
+  color: rgb(255, 255, 255); }
   @media screen and (max-width: 992px) {
     body {
       font-size: 16px; } }
@@ -80,7 +80,7 @@ figure {
   position: fixed;
   overflow-y: scroll;
   z-index: 1001;
-  background: #c2c5d7;
+  background: #000000;
   -webkit-transition: 0.5s;
   -o-transition: 0.5s;
   transition: 0.5s; }
@@ -117,7 +117,7 @@ figure {
     #colorlib-aside #colorlib-logo a {
       display: block;
       text-align: center;
-      color: #000;
+      color: rgb(255, 255, 255);
       padding-right: .3em; }
   #colorlib-aside #colorlib-main-menu {
     display: block;
@@ -140,7 +140,7 @@ figure {
         text-transform: uppercase;
         letter-spacing: 1px; }
         #colorlib-aside #colorlib-main-menu ul li a {
-          color: rgba(0, 0, 0, 0.7);
+          color: rgb(255, 255, 255);
           text-decoration: none;
           position: relative;
           padding: 10px 0;
